# personal_agent

./: .env.sample  .gitignore  CLAUDE.md  README.md  pyproject.toml
personal_agent/: main.py  tracing.py
personal_agent/agents/: __init__.py  base.py
personal_agent/agents/arxiv/: __init__.py  __main__.py  arxiv.py  arxiv_executor.py
personal_agent/mcp/client/: arxiv.py  base.py
personal_agent/mcp/server/: arxiv.py
personal_agent/router/: arxiv.py  hello.py
ui/simple/: index.html  package-lock.json  package.json
ui/simple/src/: App.jsx  index.css
ui/simple/src/components/: ChatHeader.jsx  ChatInput.jsx  ChatMessages.jsx  MessageBubble.jsx
ui/simple/src/hooks/: useChat.js
ui/simple/src/lib/: utils.js
ui/simple/src/store/: chatStore.js
